--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.441.0",
+    "pouchdb": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -26,6 +28,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.1",
     "@eslint/js": "^9.9.0",
+    "@types/pouchdb": "^6.4.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -38,6 +41,7 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
